@@ -3,7 +3,7 @@ package conversion;
 import static java.nio.file.Files.newOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;import java.nio.file.Paths;
 import org.eclipse.rdf4j.rio.turtle.TurtleWriter;
 
 public class IoUtils {
@@ -11,7 +11,7 @@ public class IoUtils {
   public static TurtleWriter getWriter(String path) {
     TurtleWriter writer = null;
     try {
-      writer = new TurtleWriter(newOutputStream(Paths.get(path)));
+      writer = new TurtleWriter(newOutputStream(Path.of(path)));
     } catch (IOException e) {
       e.printStackTrace();
     }
